TU-33: UserEvent tests
